--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ num-traits = "0.2.19"
 regex = "1.10.4"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
+thiserror = "1.0.60"
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
 tower-http = {version="0.5.2", features = ["compression-full", "cors", "trace", "fs"]}
 tracing = "0.1.40"
