--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "ne
 tower-http = {version="0.5.2", features = ["compression-full", "cors", "trace", "fs"]}
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+uuid =  { version = "1.8.0", features = ["v4"] }
 
 
 [[example]]
